--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.128.6",
     "httpx>=0.28.1",
     "motor>=3.7.1",
+    "openai>=1.40.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "uvicorn>=0.40.0",
